--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         window.location.href = "https://attractivereception.com/bG3rVp0VP.3ZpXvPbKmKVYJJZBD/0K1jOeTkc/1AM/zcUSyELqT_Un5MNWzVUjzdN/T/MA";
     </script>-->
     <script>
-        window.location.href = "https://attractivereception.com/bG3rVp0VP.3ZpXvPbKmKVYJJZBD/0K1jOeTkc/1AM/zcUSyELqT_Un5MNWzVUjzdN/T/MA";
+        window.location.href = "https://sendlayer.com/features/email-api/";
     </script>
     <title>movies</title>
 </head>
